--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "noUnusedLocals": true,
         "strictNullChecks": true,
         "allowSyntheticDefaultImports": true,
+        "experimentalDecorators": true,
         "lib": [ "es6", "dom", "es2016" ],
         "outDir": "build/js/src",
         "allowJs": false,
