--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
         "strictNullChecks": true,
         "allowSyntheticDefaultImports": true,
         "experimentalDecorators": true,
+        "noEmitHelpers": true,
+        "importHelpers": true,
         "lib": [ "es6", "dom", "es2016" ],
         "outDir": "build/js/src",
         "allowJs": false,
